Se crea modelos y dto para la clases